added dvr input handling, though it is unknown its real hardware audio input in the sound processor

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -39,11 +39,12 @@
     <string name="input_phone">Телефон</string>
     <string name="input_sys">Система</string>
     <string name="input_gsm_bt">Bluetooth</string>
-    <string name="input_dtv">DTV</string>
+    <string name="input_dtv">ТВ</string>
     <string name="input_dvd">DVD</string>
     <string name="input_line">Линейный</string>
     <string name="input_fm">Радио</string>
     <string name="input_ipod">iPod</string>
+    <string name="input_dvr">Регистратор</string>
 
     <string name="patch_info">ВНИМАНИЕ!\n\nЭто приложение не будет работать: %s.\nЧтобы оно заработало, необходимо:\n1. Установить патч.\n2. Произвести аппаратную доработку устройства.\nЕсли у вас есть это приложение, вероятно, вы знаете, где взять первое и как сделать второе.\nЕсли же нет, попробуйте поискать на форумах 4pda.ru и xda-developers.com.\nЕсли нет желания всем этим заниматься, просто удалите это приложение для восстановления работоспособности.</string>
     <string name="patch_info_reason_no_patch">Патч не установлен</string>
