changed some strings

--- a/mtcsound/src/main/res/values-ru/strings.xml
+++ b/mtcsound/src/main/res/values-ru/strings.xml
@@ -46,7 +46,7 @@
     <string name="input_ipod">iPod</string>
     <string name="input_dvr">Регистратор</string>
 
-    <string name="patch_info">ВНИМАНИЕ!\n\nЭто приложение не будет работать: %s.\nЧтобы оно заработало, необходимо:\n1. Установить патч.\n2. Произвести аппаратную доработку устройства.\nЕсли у вас есть это приложение, вероятно, вы знаете, где взять первое и как сделать второе.\nЕсли же нет, попробуйте поискать на форумах 4pda.ru и xda-developers.com.\nЕсли нет желания всем этим заниматься, просто удалите это приложение для восстановления работоспособности.</string>
+    <string name="patch_info">ВНИМАНИЕ!\n\nЭто приложение не будет работать: %s.\nЧтобы оно заработало, необходимо:\n1. Установить патч.\n2. Произвести аппаратную доработку устройства.\nЕсли у вас есть это приложение, вероятно, вы знаете, где взять первое и как сделать второе.\nЕсли же нет, попробуйте поискать на forum.xda-developers.com.\nЕсли нет желания всем этим заниматься, просто удалите это приложение для восстановления работоспособности.</string>
     <string name="patch_info_reason_no_patch">Патч не активен</string>
     <string name="patch_info_reason_no_i2c_control">Отсутствует управление звуковым процессором</string>
 
