--- a/mtcsound/src/main/res/values-ru/strings.xml
+++ b/mtcsound/src/main/res/values-ru/strings.xml
@@ -33,7 +33,12 @@
     <string name="setup_vol">Громкость</string>
     <string name="setup_vol_max_gain">Максимальный уровень</string>
     <string name="setup_vol_min_gain">Минимальный уровень</string>
+    <string name="setup_phone_output">Вывод телефона</string>
     <string name="setup_other">Прочее</string>
+    <string name="setup_button_phone_fl">ПЛ</string>
+    <string name="setup_button_phone_fr">ПП</string>
+    <string name="setup_button_phone_rl">ЗЛ</string>
+    <string name="setup_button_phone_rr">ЗП</string>
     <string name="setup_button_altnavi">Альт. микс Навигации</string>
 
     <string name="input_phone">Телефон</string>
