--- a/mtcsound/src/main/res/values/strings.xml
+++ b/mtcsound/src/main/res/values/strings.xml
@@ -74,7 +74,12 @@
     <string name="setup_vol">Volume</string>
     <string name="setup_vol_min_gain">Minimum Gain</string>
     <string name="setup_vol_max_gain">Maximum Gain</string>
+    <string name="setup_phone_output">Phone Output</string>
     <string name="setup_other">Other</string>
+    <string name="setup_button_phone_fl">FL</string>
+    <string name="setup_button_phone_fr">FR</string>
+    <string name="setup_button_phone_rl">RL</string>
+    <string name="setup_button_phone_rr">RR</string>
     <string name="setup_button_altnavi">Alt. Navigation Mix</string>
 
     <string name="input_phone">Phone</string>
