v. 1.6 - added setting for alternative BT modules that route sound via Android, not directly to dedicated BC37xxx input

--- a/mtcsound/src/main/res/values-ru/strings.xml
+++ b/mtcsound/src/main/res/values-ru/strings.xml
@@ -39,6 +39,7 @@
     <string name="setup_button_phone_fr">ПП</string>
     <string name="setup_button_phone_rl">ЗЛ</string>
     <string name="setup_button_phone_rr">ЗП</string>
+    <string name="setup_button_altgsm">GSM через Android</string>
     <string name="setup_button_altnavi">Альт. микс Навигации</string>
 
     <string name="input_phone">Телефон</string>
